# udp_filetransfer

./: CMakeLists.txt  README.md  list.txt
src/: udp_client.c  udp_server.c
